# paradoxGameConverters

./: .gitignore
EU4toV2/: CMakeLists.txt  Copy_Files.sh  EU4ToV2-VS2013.vcxproj  EU4ToV2-VS2013.vcxproj.filters
EU4toV2/Source/: CommonUtils.cpp  Configuration.cpp  Configuration.h  CountryMapping.cpp  Date.cpp  EU4toV2Converter.cpp  FlagUtils.cpp  LinuxUtils.cpp  Log.cpp  Mapper.cpp  Mapper.h  OSCompatabilityLayer.cpp  OSCompatabilityLayer.h  WinUtils.cpp  WinUtils.h
EU4toV2/Source/EU4World/: EU4Army.cpp  EU4Army.h  EU4Country.h  EU4Leader.h  EU4Localisation.cpp  EU4Province.cpp  EU4Version.cpp  EU4Version.h  EU4World.cpp
EU4toV2/Source/Parsers/: Object.cpp  Parser.cpp
EU4toV2/Source/V2World/: V2Army.cpp  V2Army.h  V2Country.cpp  V2Country.h  V2Diplomacy.cpp  V2Factory.cpp  V2Flags.cpp  V2Flags.h  V2Leader.h  V2Localisation.cpp  V2Party.cpp  V2Province.cpp  V2Province.h  V2Reforms.h  V2State.cpp  V2TechSchools.cpp  V2World.cpp  V2World.h
